<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/savedTopLevel_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".ui.listeLines.ListLinesAccueil">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@color/colorBackgroundLight"
        android:elevation="4dp"
        android:orientation="horizontal"
        android:paddingVertical="5dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutRechercherList"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="6"
            android:hint="@string/rechercher_edit_text"
            app:boxBackgroundColor="@color/colorBackgroundLight"
            app:boxBackgroundMode="none"
            app:boxStrokeColor="@null"
            app:endIconMode="clear_text"
            app:hintEnabled="false"
            app:startIconContentDescription="Icone search"
            app:startIconDrawable="@drawable/ic_search_black_24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/rechercherList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rechercher_lignes_stations"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/qr_code"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:background="@color/colorBackgroundLight"
            android:contentDescription="@string/logo_qr_code"
            android:src="@drawable/ic_qr_code"
            android:tint="@color/iconColor"
            app:fabSize="auto" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layoutNoFoundLine"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="?attr/actionBarSize"
        android:gravity="center"
        android:visibility="gone">

        <TextView
            android:id="@+id/noLineFound"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:hyphenationFrequency="normal"
            android:text="@string/aucun_resultat_recherche"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/noLinesFoundImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/noLineFound"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/aucune_ligne_favorite"
            android:gravity="center"
            android:src="@drawable/ic_nofind" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lines_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="?attr/actionBarSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/card_lines_view" />

    </RelativeLayout>
</LinearLayout>